tweaking theme for sorting bunch of posts

--- a/categories.html
+++ b/categories.html
@@ -6,17 +6,17 @@ group: navigation
 ---
 {% include JB/setup %}
 
+{% assign sortedCats = site.categories | sort %}
+
 <ul class="tag_box inline">
-  {% assign categories_list = site.categories %}
+  {% assign categories_list = sortedCats %}
   {% include JB/categories_list %}
 </ul>
 
-
-{% for category in site.categories %} 
+{% for category in sortedCats %} 
   <h2 id="{{ category[0] }}-ref">{{ category[0] | join: "/" }}</h2>
   <ul>
     {% assign pages_list = category[1] %}  
     {% include JB/pages_list %}
   </ul>
 {% endfor %}
-
