--- a/tags.html
+++ b/tags.html
@@ -6,13 +6,15 @@ group: navigation
 ---
 {% include JB/setup %}
 
+{% assign sortedTags = site.tags | sort %}
+
 <ul class="tag_box inline">
-  {% assign tags_list = site.tags %}  
+  {% assign tags_list = sortedTags %}  
   {% include JB/tags_list %}
 </ul>
 
 
-{% for tag in site.tags %} 
+{% for tag in sortedTags %} 
   <h2 id="{{ tag[0] }}-ref">{{ tag[0] }}</h2>
   <ul>
     {% assign pages_list = tag[1] %}  
